--- a/package.json
+++ b/package.json
@@ -12,8 +12,15 @@
   "dependencies": {
     "@astrojs/check": "^0.5.8",
     "@astrojs/tailwind": "^5.1.0",
+    "@fontsource-variable/onest": "^5.0.3",
     "astro": "^4.5.2",
+    "astro-icon": "^1.1.0",
     "tailwindcss": "^3.4.1",
+    "tailwindcss-fluid-type": "^2.0.3",
+    "tiny-invariant": "^1.3.3",
     "typescript": "^5.4.2"
+  },
+  "devDependencies": {
+    "@iconify-json/mdi": "^1.1.64"
   }
 }
